@@ -8,6 +8,7 @@ export(dkprime)
 export(dlambdap)
 export(dprodchisqpow)
 export(dproddnf)
+export(dprodnormal)
 export(dsumchisqpow)
 export(dsumlogchisq)
 export(dupsilon)
@@ -19,6 +20,7 @@ export(pkprime)
 export(plambdap)
 export(pprodchisqpow)
 export(pproddnf)
+export(pprodnormal)
 export(psumchisqpow)
 export(psumlogchisq)
 export(pupsilon)
@@ -30,6 +32,7 @@ export(qkprime)
 export(qlambdap)
 export(qprodchisqpow)
 export(qproddnf)
+export(qprodnormal)
 export(qsumchisqpow)
 export(qsumlogchisq)
 export(qupsilon)
@@ -41,6 +44,7 @@ export(rkprime)
 export(rlambdap)
 export(rprodchisqpow)
 export(rproddnf)
+export(rprodnormal)
 export(rsumchisqpow)
 export(rsumlogchisq)
 export(runExample)
