@@ -268,3 +268,16 @@ pow <- c(1,0.5,2,1.5)
 testf(list(d=dprodchisqpow,p=pprodchisqpow,q=qprodchisqpow,r=rprodchisqpow),nobs=2^14,df,ncp,pow)
 ```
 
+## Product of independent normals
+
+This distribution is the product of independent 
+normal variates. Warning: when the coefficient of variation is
+large for some of the factors, this approximation can be _terrible_.
+
+```{r prodnormal}
+require(sadists)
+mu <- c(100,-50,-10)
+sigma <- c(10,5,10)
+testf(list(d=dprodnormal,p=pprodnormal,q=qprodnormal,r=rprodnormal),nobs=2^14,mu,sigma)
+```
+
